--- a/index.html
+++ b/index.html
@@ -172,6 +172,12 @@
         </div>
       </div>
     </div>
+    <small
+      ><a href="https://github.com/ayseSultanGun/weatherTool"
+        >Open-source code</a
+      >
+      by ayse sultan guneroglu</small
+    >
     <script src="src6/index6.js"></script>
   </body>
 </html>
