link in new tab

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       </div>
     </div>
     <small
-      ><a href="https://github.com/ayseSultanGun/weatherTool"
+      ><a href="https://github.com/ayseSultanGun/weatherTool" target="_blank"
         >Open-source code</a
       >
       by ayse sultan guneroglu</small
