current time format

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="card-body">
               <br />
               <h2 class="main-card-text">today is</h2>
-              <p><strong>wednesday,</strong></p>
+              <p id="date"><strong>wednesday,</strong></p>
               <h1 class="degree-main" id="mainTemperature">20°C</h1>
               <p>now in <strong id="city">Istanbul</strong></p>
               <br />
