added relevant icon from API

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   />
                 </div>
                 <div class="form-group">
-                  <input type="text" value="istanbul" class="form-control" />
+                  <input type="text" value="city" class="form-control" />
                 </div>
                 <input
                   type="submit"
@@ -116,7 +116,7 @@
         <div class="col-4">
           <div class="card">
             <div class="card-body">
-              <h1 class="icon-main">🌻</h1>
+              <img src="" alt="" class="icon-main" id="icon-main" />
               <p id="description"></p>
               <p>humidity: <span id="humidity"></span>% 💧</p>
               <p>wind: <span id="wind"></span> km/hr 🍃</p>
