temperature conversion working

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
 
               <p>humidity: <span id="humidity"></span>% 💧</p>
               <p>wind: <span id="wind"></span> km/hr 🍃</p>
-              <a class="active" href="">°F</a> | <a href="">°C</a>
+              <a id="fahrenheit-link" href="">°F</a> |
+              <a class="active" id="celsius-link" href="">°C</a>
             </div>
           </div>
         </div>
