added correct forecast data from new API call

--- a/index.html
+++ b/index.html
@@ -126,57 +126,7 @@
         </div>
       </div>
       <br />
-      <div class="row">
-        <div class="col-3">
-          <div class="card">
-            <div class="card-body">
-              <h2 class="icon">☀</h2>
-              <p>tomorrow</p>
-              <h3>22°C</h3>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-2">
-          <div class="card">
-            <div class="card-body">
-              <h2 class="icon">💨</h2>
-              <p>friday</p>
-              <h3>15°C</h3>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-2">
-          <div class="card">
-            <div class="card-body">
-              <h2 class="icon">☁</h2>
-              <p>saturday</p>
-              <h3>17°C</h3>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-2">
-          <div class="card">
-            <div class="card-body">
-              <h2 class="icon">⛅</h2>
-              <p>sunday</p>
-              <h3>19°C</h3>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-2">
-          <div class="card">
-            <div class="card-body">
-              <h2 class="icon">☀</h2>
-              <p>monday</p>
-              <h3>20°C</h3>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="row" id="forecast"></div>
     </div>
     <small
       ><a href="https://github.com/ayseSultanGun/weatherTool" target="_blank"
